[package]
name = "create-react-typescript-npm-package"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Quickly scaffold a project for a React component that uses Typescript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
